# cxbuild

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_wheels.yml
cxbuild/: __init__.py  activity.py  backend.py  build_tool.py  cmake_extension.py  cmake_tool.py  copyutils.py  cxbuild.py  extension_builder.py  pip_tool.py  project.py  project_base.py  pyproject.py  setup_tool.py  solution.py  tool.py
cxbuild/build_hooks/: __init__.py
cxbuild/cli/: __init__.py
pkg/cxb_simple/: CMakeLists.txt  pyproject.toml  setup.py
pkg/cxb_simple/cxb_simple/: __main__.py
pkg/cxb_simple/src/: main.cpp
