[project]
name = "cxb_simple"
version = "0.0.1"
description="A minimal example package (with pybind11)"
readme = "README.md"
authors = [
  { name = "My Name", email = "me@email.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["cxb_simple"]
